# ccg_app_rust_DeepseekOCR_PDF2Markdown

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Usage.md
__docs/: 01. Initial build and Test.txt  02. Server solution 01 testing.txt  03. New server solution - Works.txt  04. Parallel Processing - Works for 2 workers.txt  05. CUDA Fixes and Deadlock Resolution.txt  05. CUDA and Marker Troubleshooting Guide.txt  06. CUDA Corruption Fixes, Marker bugs.txt
__logs/: test_run_4workers_20260207.md
research/: deepseek_ocr2_github_issues.md  deepseek_ocr2_speed_fixes.md  docling.md  fast_ocr_architecture_analysis.md  marker.md  mineru.md  other_ocr_tools.md  speed_comparison.md  troubleshooting_cuda_marker.md  vllm_vlm_serving.md  vlm_quantization_speedup.md
server/: requirements.txt  start.sh
server/app/: main.py  model.py  pdf_pipeline.py  schemas.py
src/: api_client.rs  app.rs  cli.rs  error.rs  logging.rs  main.rs  scanner.rs  shutdown.rs  types.rs  worker.rs
src/tui/: event.rs  mod.rs  ui.rs  widgets.rs
