[package]
name = "pdf2md"
version = "0.3.0"
edition = "2021"
description = "CLI tool to convert PDFs to Markdown via Marker OCR"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart", "json"] }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
walkdir = "2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"

[dev-dependencies]
tempfile = "3"
